--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	</header>
 
 	<div class="content">
-		<div class="content__inner">
-			<div class="container">
-				<div class="content__foto"></div>
+		<div class="container">
+			<div class="content__inner">
+				<img src="/image/1.jpg" class="content__foto"></img>
 				<h1 class="content__title">Эта страница посвещается моему пофигизму...</h1>
 				<p class="content__text"></p>
 			</div>
