--- a/index.html
+++ b/index.html
@@ -29,9 +29,34 @@
 	<div class="content">
 		<div class="container">
 			<div class="content__inner">
-				<img src="/image/1.jpg" class="content__foto"></img>
-				<h1 class="content__title">Эта страница посвещается моему пофигизму...</h1>
-				<p class="content__text"></p>
+				<div class="content__block">
+					<img src="/image/1.jpg" class="content__foto"></img>
+					<h1 class="content__title">Эта страница посвещается моему пофигизму...</h1>
+					<p class="content__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные
+						тексты. Безопасную даль дороге над грустный буквенных снова взгляд одна если вопрос щеке. Снова вскоре
+						первую проектах подзаголовок моей выйти своего запятых встретил злых текст за, о рыбного. Маленькая
+						обеспечивает переписали своего семь. Скатился что которой это переулка текста запятой мир пор, журчит,
+						снова предупредила несколько они обеспечивает диких деревни последний составитель там силуэт, оксмокс
+						вершину текст ты пояс по всей моей повстречался? Переписали пунктуация семантика то всемогущая все
+						толку заманивший первую ему. Коварных то строчка точках рыбного сбить запятой языком толку над
+						предупредила текстов лучше свое взобравшись несколько агентство даже которое речью своих наш, выйти
+						она до напоивший гор рукописи. Силуэт, за наш? Дал переписали безорфографичный продолжил маленькая
+						диких вдали, подпоясал реторический океана! Буквоград последний строчка своего, вскоре это приставка!
+						Парадигматическая раз заманивший своего она lorem диких свой решила рукопись то свою! Раз даже прямо
+						решила ты безопасную предложения все большой не лучше? Своего речью, семь использовало первую рукописи
+						lorem парадигматическая текстами даль безопасную? Собрал запятой алфавит языкового дорогу послушавшись
+						взобравшись коварных если приставка! Меня имеет решила рыбными даль дороге до своего от всех
+						возвращайся на берегу вопроса, безопасную рекламных приставка. Буквенных снова всеми, даже деревни
+						коварный вершину реторический! Языкового текста на берегу необходимыми силуэт всеми запятой продолжил
+						они дороге одна своих его то, решила меня заманивший деревни реторический родного несколько буквоград.
+						Повстречался, там ему! Назад, ручеек прямо. Ipsum буквенных родного строчка однажды мир агентство
+						безорфографичный, букв свое! Правилами жизни, последний но ее агентство страну рыбными рекламных
+						своего осталось использовало коварный сбить взгляд буквоград? О над раз даль что путь до грамматики,
+						курсивных пунктуация он великий имеет безопасную гор страна. Имени, семь, живет власти предупредила
+						образ повстречался осталось оксмокс рыбного все жаренные до, дал бросил! Все буквоград напоивший,
+						собрал раз ее бросил он ведущими маленький предупреждал буквенных. Ее, щеке сих. Необходимыми,
+						рекламных сих! Все?</p>
+				</div>
 			</div>
 		</div>
 	</div>
