--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
 			</div>
 		</div>
 	</div>
+
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__inner">
+				<div class="footer__text1">
+					<a href="" class="footer__link">Главная</a><a href="" class="footer__link">О нас</a>
+				</div>
+				<div class="footer__text2">
+					<a href="" class="footer__link">Помощь</a><a href="" class="footer__link">Соглашение</a>
+				</div>
+				<div class="footer__copy">Какой-то сайт &copy; 2021</div>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
